Updated Readme file. Fixed overflow issue with textarea.

--- a/assets/style.css
+++ b/assets/style.css
@@ -178,6 +178,7 @@ textarea {
   border-radius: 5px;
   box-shadow: 0px 0px 10px var(--black);
   padding: 1rem;
+  overflow: hidden;
 }
 .contact-section .form-container input,
 textarea {
@@ -188,6 +189,7 @@ textarea {
   border-radius: 8px;
   padding: 0.5rem 1rem;
   font-size: 16px;
+  resize: none;
 }
 .contact-section .form-container .form-button {
   background-color: var(--blue);
